# programming_experiments

./: .gitignore  .gitmodules  README.md
bash/basic/alias/: n1.sh
bash/basic/ansi_color/: n1.sh
bash/basic/array/: n1.sh
bash/basic/associative_array/: n1.sh
bash/basic/case/: n1.sh
bash/basic/condition/: n1.sh
bash/basic/curl/: n1.sh
bash/basic/date/: n1.sh
bash/basic/declare/: n1.sh
bash/basic/empty_command/: n1.sh
bash/basic/env/: n1.sh  n2.sh
bash/basic/eval/: hello.sh
bash/basic/file/: n1.sh
bash/basic/function/: delegation.sh  dynamic.sh  hello.sh  n1.sh  nested.sh
bash/basic/math/: n1.sh
bash/basic/namespace/: n1.sh  n1_aliases.sh  n1_use.sh
bash/basic/read/: ifs.sh  n1.sh
bash/basic/shift/: n1.sh
bash/basic/source/: file.sh  n1.sh  setup_env.sh  string.sh
bash/basic/string/: n1.sh  split.sh
bash/basic/timer/: n1.sh
bash/basic/tools/: versions.sh
bash/basic/trap/: _common.sh  chain.sh  condition.sh  func.sh  global.sh  n1.sh
bash/basic/vars/: exists.sh  external.sh  global.sh  hello.sh  local.sh
cmake/tutorial/: CMakeLists.txt  main.cpp
cpp/: .gitignore  README.md
cpp/leetcode/1013-partition-array-into-three-parts/: CMakeLists.txt  main.cpp
cpp/leetcode/1248-count-number-of-nice-subarrays/: .gitignore  CMakeLists.txt  main.cpp
cpp/leetcode/2047-number-of-valid-words-in-a-sentence/: CMakeLists.txt  main.cpp
cpp/leetcode/41-first-missing-positive/: CMakeLists.txt  main.cpp
cpp/leetcode/454-4sum-ii/: CMakeLists.txt  main.cpp
cpp/leetcode/832-flipping-an-image/: CMakeLists.txt  main.cpp
cpp/leetcode/897-increasing-order-search-tree/: CMakeLists.txt  main.cpp
cpp/leetcode/923-3sum-with-multiplicity/: CMakeLists.txt  combinations.hpp  combinations_test.cpp  main.cpp
cpp/leetcode/n1013/: CMakeLists.txt  main.cpp
cpp/leetcode/n2047/: CMakeLists.txt  main.cpp
cpp/leetcode/n2047_/: CMakeLists.txt  main.cpp
cpp/legacy/: NOTE.md  max_number_dir.py  max_number_md.py
cpp/legacy/n10/: NOTE.md  main.cpp
cpp/legacy/n102/: main.cpp
cpp/legacy/n103/: main.cpp
cpp/legacy/n105/: main.cpp
cpp/legacy/n106/: main.cpp
cpp/legacy/n107/: main.cpp  n107.pro
cpp/legacy/n109/: main.cpp
cpp/legacy/n11/: main.cpp
cpp/legacy/n112/: main.cpp
cpp/legacy/n115/: main.cpp
cpp/legacy/n116/: main.cpp
cpp/legacy/n119/: main.cpp
cpp/legacy/n121/: main.cpp
cpp/legacy/n123/: main.cpp
cpp/legacy/n125/: main.cpp
cpp/legacy/n126/: main.cpp
cpp/legacy/n131/: main.cpp
cpp/legacy/n133/: CMakeLists.txt  main.cpp
cpp/legacy/n134/: CMakeLists.txt
cpp/legacy/n135/: main.cpp
cpp/legacy/n139/: CMakeLists.txt
cpp/legacy/n139/.cache/clangd/index/: main.cpp.CE3350B575942991.idx
cpp/n76/: dto.cpp  dto.h  main.cpp  n76.pro  roomdto.h  userdto.h
cpp/some/: NOTE.md  conanfile.txt  deactivate_conanbuildenv-release-x86_64.bat  some.pro
cpp/some/n125/: CMakeLists.txt
cpp/some/n126/: CMakeLists.txt
golang/: README.md  go.mod
golang/exec_some/: NOTE.md  go.mod  go.sum  main.go
golang/n1/: go.mod
golang/some/: NOTE.md  go.mod  go.sum  main.go
golang/topic/: TODO.md
postgres/isolation/: create_table.sql  insert_accounts.sql  notes.md
python/some/: urls.txt
rust/some/: Cargo.toml
terraform/summary/: theses.md
(+749 files in other folders)
