cmake_minimum_required(VERSION 3.16)

project(n2047 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(n2047 main.cpp)

include(GNUInstallDirs)
install(TARGETS n2047
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
